# trading-bot

./: .gitignore  .tool-versions  LICENSE  pyproject.toml
notebooks/: max_drawdown_etfs.ipynb  run_predictions_with_timesfm.ipynb
src/: data_loader.py  portfolio.py  utils.py
src/backend/: data.py  download_data.py  utils.py
src/backend/models/timesfm/: model.py  patched_decoder.py
src/models/timesfm/: model.py  patched_decoder.py
